--- a/Makefile.windows
+++ b/Makefile.windows
@@ -18,12 +18,42 @@ CC		= 	avr-gcc
 CFLAGS	= 	-mmcu=atmega2561 -Os -Wall -Wstrict-prototypes -DNUT_CPU_FREQ=14745600 \
 			-D__HARVARD_ARCH__ -DNUTOS_VERSION=433 \
 			-Wa,-ahlms=$(SRC_DIR)/$*lst
-ASFLAGS = 	-mmcu=atmega2561 -I. -x assembler-with-cpp -Wa,-ahlms=$(SRC_DIR)/$*lst,-gstabs
+ASFLAGS = 	-mmcu=atmega2561 -I. -x assembler-with-cpp -Wa,-ahlms=$(SRC_DIR)/$*lst,-gstabs 
 LDFLAGS	=	-mmcu=atmega2561 -Wl,--defsym=main=0,-Map=TIStreamer.map,--cref
 
 
 # =================================================================================
-include Makefile.targets
+# Source files
+CFILES =        main.c			\
+				uart0driver.c	\
+				log.c			\
+                led.c			\
+				keyboard.c		\
+				display.c		\
+                vs10xx.c		\
+                remcon.c		\
+                watchdog.c		\
+				mmc.c			\
+				spidrv.c        \
+                mmcdrv.c        \
+                fat.c			\
+				flash.c			\
+				rtc.c
+			
+				
+# Header files.
+HFILES =        display.h        keyboard.h              \
+                led.h                            \
+                portio.h         remcon.h         log.h          \
+                system.h                 settings.h     \
+                                  inet.h         \
+                platform.h       version.h        update.h       \
+                           uart0driver.h    typedefs.h     \
+                       vs10xx.h         audio.h        \
+                watchdog.h       mmc.h             \
+                flash.h          spidrv.h         command.h      \
+                parse.h          mmcdrv.h         fat.h          \
+                fatdrv.h         flash.h	  	rtc.h
 
 
 # Alle source files in de ./source dir
@@ -42,15 +72,15 @@ $(TARGET):	$(OBJS)
 	avr-objcopy -O ihex $@.elf $@.hex
 #	hex2bin -ebin $@.hex
 
-# Compiling the objs's. avr-gcc autocalls assembler
-$(SRC_DIR)/%o:	$(SRC_DIR)/%c
+# Compiling the objs's. avr-gcc autocalls assembler	
+$(SRC_DIR)/%o:	$(SRC_DIR)/%c 
 	$(CC) -c $< $(CFLAGS) -I$(INC_DIR) -I$(NUT_INC) -I$(AVR_INC) -o $@
 
-
+	
 all: $(TARGET)
 
 debug:
-
+	
 	@echo $(OBJS)
 
 
